deploy: 4f095618c9a54f36cdbe58f3620b226f3c9806aa

--- a/preview/add-overlay/angular/components/tooltip/tooltip.component.scss
+++ b/preview/add-overlay/angular/components/tooltip/tooltip.component.scss
@@ -7,7 +7,6 @@ $max-height: 40px;
     position: absolute;
     max-width: $max-width;
     max-height: $max-height;
-
     transition: opacity 150ms ease-out;
 
     &:not(:hover) {
@@ -29,10 +28,18 @@ $max-height: 40px;
     border-radius: $radius-s;
     background: var(--background-inverse);
 
-    &.top {
+    &.top,
+    &.bottom {
         transform: translateX(-50%);
+    }
+
+    &.left,
+    &.right {
+        transform: translateY(-50%);
+    }
+
+    &.top {
         bottom: 150%;
-        left: 50%;
 
         &::after {
             top: 100%;
@@ -51,10 +58,6 @@ $max-height: 40px;
     }
 
     &.bottom {
-        top: 150%;
-        left: 50%;
-        transform: translateX(-50%);
-
         &::after {
             bottom: 100%;
             left: 50%;
@@ -72,9 +75,7 @@ $max-height: 40px;
     }
 
     &.left {
-        top: 50%;
         right: 120%;
-        transform: translateY(-50%);
 
         &::after {
             top: 50%;
@@ -93,10 +94,6 @@ $max-height: 40px;
     }
 
     &.right {
-        top: 50%;
-        left: 120%;
-        transform: translateY(-50%);
-
         &::after {
             top: 50%;
             right: 100%;
