--- a/packages/react/src/components/breadcrumbs/Breadcrumbs.module.scss
+++ b/packages/react/src/components/breadcrumbs/Breadcrumbs.module.scss
@@ -21,7 +21,9 @@
 
     &:last-child {
         cursor: default;
-        color: var(--content-primary);
+        a {
+            color: var(--content-primary);
+        }
     }
 
     :focus-visible {
