--- a/preview/breadcrumbs/angular/components/breadcrumbs/breadcrumbs.component.scss
+++ b/preview/breadcrumbs/angular/components/breadcrumbs/breadcrumbs.component.scss
@@ -1,22 +1,47 @@
-.breadcrumbs-truncated {
+@use '@design-system-rte/core/design-tokens/main.scss' as *;
+
+.breadcrumbs-container {
   display: flex;
   align-items: center;
-}
+  gap: $positive-spacing_025;
 
-.breadcrumb-item {
-  margin-right: 8px;
-  color: var(--content-tertiary);
+  .breadcrumb-item {
+    display: inline-flex;
+    align-items: center;
+    opacity: 0;
+    animation: fadeIn 150ms forwards;
+  
+    @include typography-text-m-regular;
+
+    rte-link {
+      ::ng-deep {
+        a, a.subtle {
+          color: var(--content-tertiary);
+        }
+      }
+    }
+  
+    &:last-child {
+        cursor: default;
+        color: var(--content-primary);
+    }
+  
+    :focus-visible {
+        outline: 1px solid var(--border-brand-focused);
+        outline-offset: $radius-s;
+        border-radius: $radius-s;
+    }
+  }
 }
 
 .separator {
-  margin: 0 4px;
+  color: var(--content-tertiary);
+  padding: 0 $positive-spacing_100;
+  user-select: none;
+  opacity: 0;
+  animation: fadeIn 150ms forwards;
 }
 
-.loaded {
-  font-weight: bold;
-}
-
-.icon-more-horiz {
-  font-size: 12px;
-  cursor: pointer;
+@keyframes fadeIn {
+  to { opacity: 1; }
 }
