--- a/preview/breadcrumbs/angular/components/breadcrumbs/breadcrumbs.component.html
+++ b/preview/breadcrumbs/angular/components/breadcrumbs/breadcrumbs.component.html
@@ -9,8 +9,8 @@
       />
       </div>
       <span aria-hidden="true" class="separator">/</span>
-      <span title="More items: {{ truncatedItemsText() }}" class="breadcrumb-item">
-        <rte-icon name="more-horiz" tabIndex="0" role="menu" aria-label="More items" data-testid="show-more" [size]="12"/>
+      <span class="breadcrumb-item">
+        <rte-icon name="more-horiz" tabIndex="0" role="menu" aria-label="More items" data-testid="show-more" rteTooltipPosition="bottom" [size]="12" [rteTooltip]="truncatedItemsText()"/>
       </span>
       <span aria-hidden="true" class="separator">/</span>
       @for (item of truncatedItems()!.remaining; track item.link; let i = $index) {
