fix (breadcrumbs): correct unadressed accessibility criteria

--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -99,3 +99,5 @@
   [selectedSegment]="selectedSegment()"
   (change)="onSegmentSelected($event)"/>
 </div>
+<hr />
+<rte-breadcrumbs [items]="breadcrumbItems" />
