--- a/packages/react/src/components/breadcrumbs/Breadcrumbs.module.scss
+++ b/packages/react/src/components/breadcrumbs/Breadcrumbs.module.scss
@@ -36,7 +36,7 @@
 
 
 .separator {
-    color: var(--content-tertiary);
+    color: var(--content-secondary);
     padding: 0 $positive-spacing_100;
     user-select: none;
     opacity: 0;
