--- a/preview/breadcrumbs/angular/components/breadcrumbs/breadcrumbs.component.scss
+++ b/preview/breadcrumbs/angular/components/breadcrumbs/breadcrumbs.component.scss
@@ -35,7 +35,7 @@
 }
 
 .separator {
-  color: var(--content-tertiary);
+  color: var(--content-secondary);
   padding: 0 $positive-spacing_100;
   user-select: none;
   opacity: 0;
