fix: add missing default font colors for Checkbox, Icon & Radio Button

--- a/packages/react/src/components/checkbox/Checkbox.module.scss
+++ b/packages/react/src/components/checkbox/Checkbox.module.scss
@@ -151,6 +151,7 @@
   .checkbox-text-container {
     label {
       @include typography-text-l;
+      color: var(--content-primary);
     }
 
     .checkbox-description {
