--- a/packages/react/src/components/radioButton/RadioButton.module.scss
+++ b/packages/react/src/components/radioButton/RadioButton.module.scss
@@ -120,6 +120,7 @@
 
 .radioButtonLabel {
     @include typography-radio-button-l;
+    color: var(--content-primary);
 
     &[data-read-only='true'] {
         pointer-events: none;
