feat(loader):added fade in apparition

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/loader/loader.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/loader/loader.component.scss
@@ -8,6 +8,7 @@
     align-items: center;
     padding: $positive-spacing_050;
     gap: $positive-spacing_100;
+    animation: fade-in 150ms linear;
 
     &.labelPosition--under {
         flex-direction: column;
@@ -54,4 +55,13 @@
         transform: rotate(360deg);
     }
 
+}
+
+@keyframes fade-in {
+    from{
+        opacity:0
+    }
+    to{
+        opacity:1
+    }
 }
