chore(tokens): add background-info and content colors + update background-status colors + add border value none

--- a/packages/core/design-tokens/tokens/themes/_violet-dark.scss
+++ b/packages/core/design-tokens/tokens/themes/_violet-dark.scss
@@ -21,16 +21,17 @@ $violet-dark: (
   "background-brand-inverse-hover": $violet-700,
   "background-brand-inverse-pressed": $violet-600,
   "background-danger-default": $rouge-indications-400,
-  "background-danger-hover": $rouge-indications-500,
-  "background-danger-pressed": $rouge-indications-600,
+  "background-danger-hover": $rouge-indications-300,
+  "background-danger-pressed": $rouge-indications-200,
+  "background-info-default": $bleu-digital-400,
   "background-status-info-regular": $bleu-digital-400,
-  "background-status-info-subtle": $bleu-digital-100,
+  "background-status-info-subtle": $bleu-digital-900,
   "background-status-warning-regular": $jaune-500,
   "background-status-warning-subtle": $jaune-100,
   "background-status-success-regular": $vert-digital-400,
   "background-status-success-subtle": $vert-digital-200,
   "background-status-alert-regular": $rouge-indications-500,
-  "background-status-alert-subtle": $rouge-indications-100,
+  "background-status-alert-subtle": $rouge-indications-900,
   "border-primary": $greyscale-400,
   "border-secondary": $greyscale-600,
   "border-tertiary": $greyscale-800,
@@ -39,7 +40,7 @@ $violet-dark: (
   "border-inverse": $greyscale-900,
   "border-brand-default": $violet-0,
   "border-brand-focused": $violet-0,
-  "border-danger": $rouge-indications-600,
+  "border-danger": $rouge-indications-400,
   "border-info": $bleu-digital-500,
   "border-warning": $jaune-indications-400,
   "border-success": $vert-digital-600,
@@ -110,9 +111,12 @@ $violet-dark: (
   "content-danger": $rouge-indications-400,
   "content-danger-hover": $rouge-indications-500,
   "content-danger-inverse": $core-white,
+  "content-success": $vert-digital-400,
+  "content-success-hover": $vert-digital-500,
+  "content-info": $bleu-digital-400,
+  "content-info-hover": $bleu-digital-500,
   "content-decorative": $greyscale-900,
   "content-status": $greyscale-900,
-  "content-success": $vert-digital-600,
   "decorative-neutral": $greyscale-50,
   "decorative-bleu-iceberg": $bleu-iceberg-200,
   "decorative-vert-foret": $vert-foret-100,
