--- a/packages/core/design-tokens/tokens/_border.scss
+++ b/packages/core/design-tokens/tokens/_border.scss
@@ -6,6 +6,7 @@ $radius-l: 12px;
 $radius-xl: 16px;
 $radius-2xl: 32px;
 $radius-pill: 999px;
+$width-none: 0px;
 $width-xs: 1px;
 $width-s: 2px;
 $width-m: 4px;
