--- a/packages/core/design-tokens/tokens/themes/_violet-light.scss
+++ b/packages/core/design-tokens/tokens/themes/_violet-light.scss
@@ -23,6 +23,7 @@ $violet-light: (
   "background-danger-default": $rouge-indications-600,
   "background-danger-hover": $rouge-indications-700,
   "background-danger-pressed": $rouge-indications-800,
+  "background-info-default": $bleu-digital-600,
   "background-status-info-regular": $bleu-digital-400,
   "background-status-info-subtle": $bleu-digital-100,
   "background-status-warning-regular": $jaune-500,
@@ -110,9 +111,12 @@ $violet-light: (
   "content-danger": $rouge-indications-600,
   "content-danger-hover": $rouge-indications-700,
   "content-danger-inverse": $core-white,
+  "content-success": $vert-digital-700,
+  "content-success-hover": $vert-digital-800,
+  "content-info": $bleu-digital-600,
+  "content-info-hover": $bleu-digital-700,
   "content-decorative": $greyscale-900,
   "content-status": $greyscale-900,
-  "content-success": $vert-digital-600,
   "decorative-neutral": $greyscale-50,
   "decorative-bleu-iceberg": $bleu-iceberg-200,
   "decorative-vert-foret": $vert-foret-100,
