--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown.component.html
@@ -1,4 +1,4 @@
-<span #trigger>
+<span #trigger class="rte-trigger">
   <ng-content></ng-content>
 </span>
 <ng-content select="rte-dropdown-menu" hidden></ng-content>
