--- a/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/icon-button/icon-button.component.scss
@@ -1,7 +1,7 @@
 @use '@design-system-rte/core/design-tokens/main.scss' as *;
 
 .rte-icon-button {
-    display: inline-flex;
+    display: flex;
     cursor: pointer;
     height: 24px;
     align-items: center;
