--- a/preview/add-dropdown/angular/components/dropdown/dropdown.component.html
+++ b/preview/add-dropdown/angular/components/dropdown/dropdown.component.html
@@ -1,4 +1,4 @@
-<span #trigger>
+<span #trigger class="rte-trigger">
   <ng-content></ng-content>
 </span>
 <ng-content select="rte-dropdown-menu" hidden></ng-content>
