--- a/packages/react/.storybook/template/IconTitle/IconTitle.css
+++ b/packages/react/.storybook/template/IconTitle/IconTitle.css
@@ -1,5 +1,3 @@
-@use '@design-system-rte/core/design-tokens/main.scss' as *;
-
 .storybook_icon {
 
     display: flex;
@@ -22,6 +20,10 @@
     .storybook_icon_title {
         text-align: center;
         margin: 0;
-        @include typography-storybook-subtitle;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 32px;
+        letter-spacing: -0.5px;
+        color: #21272A;
     }
 }
