feat(dropdown): handle keyboard interaction for angular component

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdownMenu/dropdown-menu.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdownMenu/dropdown-menu.component.html
@@ -6,7 +6,12 @@
   [ngStyle]="{ top: positionY() + 'px', left: positionX() + 'px' }"
   (click)="handleClick($event)"
 >
-  <ul class="rte-dropdown-items">
+  <ul
+    class="rte-dropdown-items"
+    role="menu"
+    (keyup)="handleKeyup($event)"
+    (keydown)="handleKeydown($event)"
+  >
     <ng-container #container></ng-container>
   </ul>
 </div>
