--- a/preview/breadcrumb-with-dropdown/angular/components/dropdown/dropdownMenu/dropdown-menu.component.html
+++ b/preview/breadcrumb-with-dropdown/angular/components/dropdown/dropdownMenu/dropdown-menu.component.html
@@ -6,7 +6,12 @@
   [ngStyle]="{ top: positionY() + 'px', left: positionX() + 'px' }"
   (click)="handleClick($event)"
 >
-  <ul class="rte-dropdown-items">
+  <ul
+    class="rte-dropdown-items"
+    role="menu"
+    (keyup)="handleKeyup($event)"
+    (keydown)="handleKeydown($event)"
+  >
     <ng-container #container></ng-container>
   </ul>
 </div>
