feat(dropdown): set correct style for focus

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdownItem/dropdown-item.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdownItem/dropdown-item.component.scss
@@ -33,8 +33,8 @@
   }
 
   &:focus-visible {
-    outline: $width-xs solid var(--border-brand-focused);
-    outline-offset: -1px;
+    outline: none;
+    background-color: var(--background-hover);
   }
 }
 
