feat(popover): implement keyboard navigation and close functionality on angular

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/popover/popover.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/popover/popover.component.html
@@ -8,6 +8,7 @@
   [attr.data-alignment]="alignment()"
   [attr.data-open]="isOpen()"
   [style]="{ top: coordinates().top + 'px', left: coordinates().left + 'px' }"
+  (keydown)="handleKeydown($event)"
 >
   <div class="popoverInner">
     <div class="popoverContentContainer">
@@ -16,6 +17,7 @@
     </div>
     <div class="popoverButtonContainer">
       <rte-button
+        *ngIf="secondaryButtonLabel()"
         variant="secondary"
         size="m"
         [label]="secondaryButtonLabel() || ''"
