chore(popover): add component in tests app

--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -168,3 +168,16 @@
 </div>
 <hr />
 <rte-breadcrumbs [items]="breadcrumbItems" />
+<hr />
+<div style="margin-top: 100px; display: flex; justify-content: center">
+  <rte-button
+    label="Hover me"
+    variant="secondary"
+    size="m"
+    buttonType="button"
+    rtePopover
+    rtePopoverPrimaryButtonLabel="Primary"
+    rtePopoverContent="This is the popover content"
+    rtePopoverTitle="Popover Title"
+  />
+</div>
