--- a/preview/add-dropdown/angular/components/dropdown/dropdownItem/dropdown-item.component.html
+++ b/preview/add-dropdown/angular/components/dropdown/dropdownItem/dropdown-item.component.html
@@ -7,10 +7,10 @@
     [attr.data-disabled]="disabled()"
     (click)="handleClick($event)"
   >
-    <span *ngIf="hasIndent() && !leftIcon" style="width: 20px"></span>
+    <span *ngIf="hasIndent() && !leftIcon()" style="width: 20px"></span>
     <rte-icon *ngIf="leftIcon()" [name]="leftIcon() ?? ''" />
     <span style="flex: 2">{{ label() }}</span>
-    <div *ngIf="trailingText">{{ trailingText() }}</div>
+    <div *ngIf="trailingText()">{{ trailingText() }}</div>
     <rte-icon *ngIf="subMenuItems.length" name="arrow-chevron-right" />
   </li>
   <div *ngIf="hasSeparator()" class="dropdown-divider">
